created our website

--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 
 <body>
     <nav>
-        <a href = 'index.html'></a>
+        <a href = 'index.html'>J</a>
+        <hr>
         <a href = 'about.html'>About</a>
         <hr>
+        <a href = 'myskills.html'>My Skills</a>
+        <hr>
+        <a href = 'work.html'>Work</a>
+        <hr>
+        <a href = 'contact.html'>Contact</a>
+        <hr>
+        <a href = 'blog.html'>Blog</a>
     </nav>
-  <h1>Hi,<br>
-  We are <br>
-  web developers</h1>
+    <h1>Hi,<br>
+        We are <br>
+        web developers
+    </h1>
   
   <script src="script.js"></script>
 </body>
