created myskills page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <nav>
-        <a href = 'index.html'>J</a>
+        <a href = 'index.html'>J Jack</a>
+        <p>Web Developer</p>
         <hr>
         <a href = 'about.html'>About</a>
         <hr>
@@ -22,12 +23,14 @@
         <hr>
         <a href = 'blog.html'>Blog</a>
     </nav>
+    
     <h1>Hi,<br>
         We are <br>
         web developers
     </h1>
-  
-  <script src="script.js"></script>
+
+    <h3><a href = 'contact.html'>Contact me!</a></h3>
+
 </body>
 
 </html>
