--- a/myskills.html
+++ b/myskills.html
@@ -10,6 +10,18 @@
   <h1>Skills &
   <br>Experience
   </h1>
-  <p>lorem22</p>
+  <p></p>
+  <p></p>
+  <p>Visit our <a href="https://www.linkedin.com/">LinkedIn</a> profile for more details or just <a href="about.html">Contact<a> me.</a></p>
+  <h4>Front-end</h4>
+  <h4>Back-end</h4>
+  <h3>Frontend Developer</h3>
+  <p>XYZ
+  <br>2017-2018<br><br>
+  We are pro at everything</p>
+  <h3>XYZ</h3>
+  <p>xyz<br>
+  2020-2022<br><br>
+  Whatever</p>
 </body>
 </html>
