--- a/index.html
+++ b/index.html
@@ -2,34 +2,41 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>JJ | Front End Developer | WordPress</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>JJ | Front End Developer | WordPress Expert</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Zen+Loop&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <nav>
-        <a href = 'index.html'>J Jack</a>
-        <p>Web Developer</p>
-        <hr>
-        <a href = 'about.html'>About</a>
-        <hr>
-        <a href = 'myskills.html'>My Skills</a>
-        <hr>
-        <a href = 'work.html'>Work</a>
-        <hr>
-        <a href = 'contact.html'>Contact</a>
-        <hr>
-        <a href = 'blog.html'>Blog</a>
+        <ul>
+            <li><a href = 'index.html'>J<br>Jack</a></li>
+            <li><p>Web Developer</p></li>
+            <hr>
+            <li><a href = 'about.html'>About</a></li>
+            <hr>
+            <li><a href = 'myskills.html'>My Skills</a></li>
+            <hr>
+            <li><a href = 'work.html'>Work</a></li>
+            <hr>
+            <li><a href = 'contact.html'>Contact</a></li>
+            <hr>
+            <li><a href = 'blog.html'>Blog</a></li>
+        </ul>
     </nav>
-    
-    <h1>Hi,<br>
+
+    <main>
+        <h1>Hi,<br>
         We are <br>
         web developers
-    </h1>
-
-    <h3><a href = 'contact.html'>Contact me!</a></h3>
+        </h1>
+        
+        <h3><a href = 'contact.html'>Contact me!</a></h3>
+    </main>
 
 </body>
 
