added navigation to contact and myskill

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,22 @@
   <title>Contact</title>
 </head>
 <body>
+  <nav>
+    <ul>
+        <li><a href = 'index.html'>J<br>Jack</a></li>
+        <li><p>Web Developer</p></li>
+        <hr>
+        <li><a href = 'about.html'>About</a></li>
+        <hr>
+        <li><a href = 'myskills.html'>My Skills</a></li>
+        <hr>
+        <li><a href = 'work.html'>Work</a></li>
+        <hr>
+        <li><a href = 'contact.html'>Contact</a></li>
+        <hr>
+        <li><a href = 'blog.html'>Blog</a></li>
+    </ul>
+</nav>
   <h1>Contact me</h1>
   <p>We are currently working on our skills so kindly wait for sometime to gain exp. However, if you have other request or question, don't hesitate to use the form.</p>
   <form>
