--- a/myskills.html
+++ b/myskills.html
@@ -7,6 +7,22 @@
   <title>myskills</title>
 </head>
 <body>
+  <nav>
+    <ul>
+        <li><a href = 'index.html'>J<br>Jack</a></li>
+        <li><p>Web Developer</p></li>
+        <hr>
+        <li><a href = 'about.html'>About</a></li>
+        <hr>
+        <li><a href = 'myskills.html'>My Skills</a></li>
+        <hr>
+        <li><a href = 'work.html'>Work</a></li>
+        <hr>
+        <li><a href = 'contact.html'>Contact</a></li>
+        <hr>
+        <li><a href = 'blog.html'>Blog</a></li>
+    </ul>
+</nav>
   <h1>Skills &
   <br>Experience
   </h1>
