--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <h1>Hi,<br>
         We are <br>
-        web developers
+        web 
         </h1>
         
         <h3><a href = 'contact.html'>Contact me!</a></h3>
