--- a/index.html
+++ b/index.html
@@ -32,12 +32,23 @@
     <main>
         <h1>Hi,<br>
         We are <br>
-        web 
+        web developers
         </h1>
         
-        <h3><a href = 'contact.html'>Contact me!</a></h3>
+        <button>Contact Me!</button>
     </main>
-
+    <footer>
+        <h2>Contact me</h2>
+        <p>We are currently working on our skills so kindly wait for sometime to gain exp. However, if you have other request or question, don't hesitate to use the form.</p>
+        <form>
+          <div></div><input type="text" name="names" placeholder="Name">
+          <input type="email" name="emails" placeholder="Email"> <br>
+          <input type="text" name="subject" placeholder="Subject"><br>
+          <textarea name="message" cols="20" rows="10" placeholder="Message"></textarea>
+          <br> 
+          <input type="submit" value="Send message!">
+        </form>
+    </footer>
 </body>
 
 </html>
